# liel

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  mkdocs.yml  mkdocs_hooks.py  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  docs-pages.yml  release-pypi.yml
docs/: index.md  why-liel.md
docs/conventions/: canonicalization.md  index.md  provenance.md  recommended-labels.md
docs/design/: architecture.md  index.md  principles.md  product-tradeoffs.md  single-writer-guard.md
docs/guide/: ci.md  cli.md  index.md  inspect.md  operations.md  quickstart.md  sample-viewer.md
docs/guide/connectors/: index.md  python.md
docs/guide/mcp/: agent-memory.md  claude-memory.md  claude-workflow.md  claude.md  index.md  tools.md
docs/guide/mcp/samples/: CLAUDE.md
docs/guide/sample-viewer/app/: index.html  viewer.js
docs/guide/sample-viewer/app/fixtures/: trace-why-postgres.export.json
docs/reference/: 1-0-readiness.md  benchmarks.md  capability-matrix.md  cli-json-inventory.md  cli-merge-report.md  features.md  format-spec.md  index.md  json-surfaces.md  reliability.md  schema-profiles.md  vector-conventions.md  viewer-json.md
docs/samples/: example-scripts.md
examples/: 01_quickstart.py  02_knowledge_graph.py  03_bulk_import.py  04_pandas_integration.py  05_visualization.py  06_export.py  07_agent_memory.py  08_demo.py  09_cli_smoke_files.py
examples/claude_project_memory/: README.md
examples/cli_smoke_data/: edges.csv  nodes.csv
examples/coding_memory/: README.md  run_demo.py
examples/demo_memory/: README.md  make_demo_files.py
examples/github-actions/: README.md  liel-memory-check.yml  liel-memory-manifest.yml
examples/notebooks/: 01_wikipedia_graph_tour.ipynb  README.md  _utils.py  social_network_analysis.ipynb
examples/sample_viewer/: README.md  index.html  styles.css  viewer.js
python/liel/: __init__.py  coding_memory.py  demo.py  event_graph.py  liel.pyi
python/liel/cli/: __init__.py  __main__.py  common.py  diff.py  events.py  exchange.py  identity.py  manifest.py  merge.py  pack.py  signature.py  stats.py  trace.py
python/liel/mcp/: __init__.py  __main__.py  server.py
scripts/bench/: bench_python_api.py
src/: db.rs  error.rs  lib.rs
src/graph/: edge.rs  fault_inject.rs  index.rs  merge.rs  mod.rs  node.rs  repair.rs  traverse.rs  vacuum.rs
src/python/: mod.rs  types.rs
src/query/: builder.rs  mod.rs
src/storage/: atomic_rename.rs  cache.rs  crc32.rs  file.rs  lock.rs  mod.rs  pager.rs  prop_codec.rs  serializer.rs  traits.rs  wal.rs
tests/: extent_roundtrip.rs
tests/python/: conftest.py  test_agent_event_log_primitives.py  test_bench_python_api.py  test_cli.py  test_coding_memory.py  test_crash_recovery.py  test_demo.py  test_error.py  test_event_graph_api.py  test_manifest_signing_contracts.py  test_mcp_surface.py  test_mcp_tools.py  test_merge_from.py  test_milestone1.py  test_milestone2.py  test_milestone3.py  test_persistence.py  test_phase2_merge.py  test_phase2_query_edges.py  test_phase2_query_nodes.py  test_phase2_vacuum.py  test_properties.py  test_public_api_surface.py  test_pyi_runtime_consistency.py  test_record_api_smoke.py  test_spec_gaps.py  test_vacuum_crash_safety.py  test_viewer_fixture_contract.py  test_writer_guard.py
